--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,13 @@
 <ul>
   
   <li>
+    <span class="date">2020/08/08</span>
+    <a href="/post/50-beta-ver-1/">胖熊50 beta ver. 1</a>
+  </li>
+  
+  <li>
     <span class="date">2020/07/21</span>
-    <a href="/post/step1/">胖熊50</a>
+    <a href="/post/step1/">胖熊50構想</a>
   </li>
   
   <li>
